--- a/.github/workflows/SFN.yml
+++ b/.github/workflows/SFN.yml
@@ -14,8 +14,8 @@ jobs:
       - name : configure AWS
         uses : aws-actions/configure-aws-credentials@v2
         with : 
-          aws-access-key-id : ${{ secrets.AWS_ACCESS_KEY_ID }}
-          aws-secret-access-key : ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws-access-key-id : ${{ AKIA3XAXRWJ74M27V7XS }}
+          aws-secret-access-key : ${{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 }}
           aws-region: us-east-2
       - name :  Deploy cloudformation stack 
         run : aws cloudformation create-stack --stack-name stack_sfn \ 
