--- a/.github/workflows/SFN.yml
+++ b/.github/workflows/SFN.yml
@@ -4,6 +4,9 @@ on :
   push:
     branches:
       - main
+  pull_request:
+    branches:
+      - main
     
 jobs:
   deploy:
@@ -18,10 +21,12 @@ jobs:
           aws-secret-access-key : ${{3Dzoz6Vuuy+nWTv5GphdrV/GcfQlW+vPdfNeCG/m }}
           aws-region: us-east-2
       - name :  Deploy cloudformation stack 
-        run: |
-          aws cloudformation create-stack --stack-name sfn-stack \
-          --template-body file://Template.yaml \
-          --region us-east-1 
+        uses : aws-actions/aws-cloudformation-github-deploy@v1
+        with :
+          name: tekloon-test-stack
+          template: Template.yaml
+          no-fail-on-empty-changeset: "1"
+          parameter-overrides: "EC2InstanceType=t2.micro" 
 
 
        
