--- a/.github/workflows/SFN.yml
+++ b/.github/workflows/SFN.yml
@@ -14,10 +14,11 @@ jobs:
     steps:
       - name : checking Repository 
         uses: actions/checkout@v2
-      - name : configure AWS
-        run: |
-          aws_access_key_id = ${{ AKIATVCL47PDJWYABMGB }}
-          aws_secret_access_key = ${{ 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 }}" > ~/.aws/credentials
+      - name: Configure AWS credentials 
+        uses: aws-actions/configure-aws-credentials@v4
+        with:
+           role-to-assume: arn:aws:iam::123456789100:role/my-github-actions-role
+           aws-region: us-east-2
 
       - name :  Deploy cloudformation stack 
         run: |
