--- a/.github/workflows/SFN.yml
+++ b/.github/workflows/SFN.yml
@@ -11,20 +11,18 @@ on :
 jobs:
   deploy:
     runs-on: ubuntu-latest
+    environment: production
     steps:
       - name : checking Repository 
         uses: actions/checkout@v2
       - name: Configure AWS credentials 
-        uses: aws-actions/configure-aws-credentials@v4
+        uses: aws-actions/configure-aws-credentials@0e613a0980cbf65ed5b322eb7a1e075d28913a83
         with:
-           role-to-assume: arn:aws:iam::123456789100:role/my-github-actions-role
+           aws-access-key-id : ${{secrets.AWS_ACCESS_KEY_ID}}
+           aws-secret-access-key: ${{secrets.AWS_SECRET_ACCESS_KEY }}
            aws-region: us-east-2
 
-      - name :  Deploy cloudformation stack 
-        run: |
-          aws cloudformation create-stack --stack-name stackSfn \
-          --template-body file://template.yaml \
-          --region us-east-1  # Replace with your desired AWS region
+
 
   
 
