--- a/.github/workflows/SFN.yml
+++ b/.github/workflows/SFN.yml
@@ -25,7 +25,7 @@ jobs:
       - name: Configure AWS credentials 
         uses: aws-actions/configure-aws-credentials@v1
         with:
-           role-to-assume: arn:aws:iam::123456789100:role/my-github-actions-role
+           role-to-assume: arn:aws:iam::038157383258:oidc-provider/token.actions.githubusercontent.com
            aws-region: us-east-2
 
 
