--- a/.github/workflows/SFN.yml
+++ b/.github/workflows/SFN.yml
@@ -25,7 +25,7 @@ jobs:
       - name: Configure AWS credentials 
         uses: aws-actions/configure-aws-credentials@v1
         with:
-           role-to-assume: arn:aws:iam::038157383258:oidc-provider/token.actions.githubusercontent.com
+           role-to-assume:  arn:aws:iam::${{ secrets.AWS_ACCOUNT_ID }}:role/github-actions-role
            aws-region: us-east-2
 
 
