--- a/.github/workflows/SFN.yml
+++ b/.github/workflows/SFN.yml
@@ -22,11 +22,12 @@ jobs:
         uses: actions/setup-node@v2
         with:
           node-version: '16'
-      - name: Configure AWS credentials 
-        uses: aws-actions/configure-aws-credentials@v1
+      - name: Configure AWS Credentials
+        uses: aws-actions/configure-aws-credentials@v4
         with:
-           role-to-assume:  arn:aws:iam::${{ 038157383258 }}:role/github-actions-role
-           aws-region: us-east-2
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws-region: us-east-2
 
 
 
