--- a/.github/workflows/SFN.yml
+++ b/.github/workflows/SFN.yml
@@ -28,8 +28,14 @@ jobs:
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           aws-region: us-east-2
-
-
+      - name: Deploy to AWS CloudFormation
+        uses: aws-actions/aws-cloudformation-github-deploy@v1
+        with:
+          name: soufianeStack
+          template: template.yaml
+          parameter-overrides: ${{ secrets.MY_SECRET_VALUE }}
+      
+      
 
   
 
